--- a/src/app/pages/employee-detail/employee-detail.component.scss
+++ b/src/app/pages/employee-detail/employee-detail.component.scss
@@ -15,3 +15,14 @@
   border: none;
   margin-top: -50%;
 }
+
+.view-employees {
+  background-color: #2557a7;
+  font-size: 18px;
+  // padding: 5px;
+  // display: inline-block;
+  // padding: 11px 15px;
+  border-radius: 10px;
+  // width: 100%;
+  margin: 0;
+}
