--- a/src/app/pages/employee-form/employee-form.component.html
+++ b/src/app/pages/employee-form/employee-form.component.html
@@ -26,7 +26,13 @@
                 <div class="col-12 col-lg-6 col-md-6 col-sm-6">
                     <div class="card">
                         <div class="card-body">
-                            <div class="sub-header" style="display: flex; justify-content: center;">
+                            <div class="row d-flex justify-content-center">
+                                <button class="btn btn-secondary view-employees w-50" [routerLink]="['/employee']">
+                                    View Employees
+                                </button>
+                            </div>
+                            <hr>
+                            <div class="" style="display: flex; justify-content: center; font-size: 20px;">
                                 Add Employee Details
                             </div>
 
