--- a/src/app/pages/employee-form/employee-form.component.scss
+++ b/src/app/pages/employee-form/employee-form.component.scss
@@ -126,10 +126,19 @@
 }
 
 .trial-btn {
-  background-color: #ff6e4e;
+  background-color: #2557a7;
   font-size: 20px;
+  padding: 5px;
+  display: inline-block;
+  padding: 11px 15px;
+  border-radius: 10px;
+  width: 100%;
+  margin: 0;
+}
 
-  // border: 1px solid rgba(0, 0, 0, 0.25);
+.view-employees {
+  background-color: #2557a7;
+  font-size: 20px;
   padding: 5px;
   display: inline-block;
   padding: 11px 15px;
