--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,3 +12,60 @@
 
 // regular style toast
 @import "~ngx-toastr/toastr";
+
+///////// ng-bootstrap: Pagination starts here /////////
+.pagination {
+  // float: right;
+  // margin: 2%;
+  margin-top: -1%;
+  font-size: 14px;
+  background-color: #f2f5fa;
+}
+
+.page-link {
+  position: relative;
+  display: block;
+  padding: 0.5rem 0.75rem;
+  // margin-left: -1px;
+  line-height: 1.25;
+  color: black !important;
+  background-color: #f2f5fa !important;
+  border: 1px solid #f2f5fa;
+}
+
+.page-item.active .page-link {
+  z-index: 3;
+  color: #fff;
+  border-color: black;
+}
+
+///////// ng-bootstrap: Pagination ends here /////////
+
+/////// ng bootstrap: sorting button starts here /////////////////////////////
+
+th[sortable] {
+  cursor: pointer;
+  user-select: none;
+  -webkit-user-select: none;
+}
+
+th[sortable].desc:before,
+th[sortable].asc:before {
+  content: "";
+  display: block;
+  background: url("assets/images/basicLogo/down_arrow.svg");
+  background-repeat: no-repeat;
+  background-size: 14px;
+  width: 20%;
+  height: 10px;
+  float: right;
+  margin-left: -25%;
+  margin-top: 4%;
+}
+
+th[sortable].desc:before {
+  transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+}
+
+/////// ng bootstrap: sorting button ends here /////////////////////////////
