--- a/src/app/pages/employee-detail/employee-detail.component.html
+++ b/src/app/pages/employee-detail/employee-detail.component.html
@@ -25,10 +25,11 @@
                         <tr>
                             <th scope="col" sortable="employeeId" (sort)="onSort($event)">Employee Id</th>
                             <th scope="col" sortable="name" (sort)="onSort($event)">Name</th>
-                            <th scope="col" sortable="email" (sort)="onSort($event)">Email</th>
-                            <th scope="col" sortable="dob" (sort)="onSort($event)">DOB</th>
-                            <th scope="col" sortable="mobileNumber" (sort)="onSort($event)">Mobile Number</th>
-                            <th scope="col" sortable="address" (sort)="onSort($event)">Address</th>
+                            <th scope="col" sortable="email" (sort)="onSort($event)" class="hide-mobile">Email</th>
+                            <th scope="col" sortable="dob" (sort)="onSort($event)" class="hide-mobile">DOB</th>
+                            <th scope="col" sortable="mobileNumber" (sort)="onSort($event)" class="hide-mobile">Mobile
+                                Number</th>
+                            <th scope="col" sortable="address" (sort)="onSort($event)" class="hide-mobile">Address</th>
                             <th scope="col">Action</th>
                         </tr>
                     </thead>
@@ -42,20 +43,20 @@
                                 <ngb-highlight [result]="employeeProfile.name" [term]="searchTerm">
                                 </ngb-highlight>
                             </td>
-                            <td>
+                            <td class="hide-mobile">
                                 <ngb-highlight [result]="employeeProfile.email" [term]="searchTerm">
                                 </ngb-highlight>
                             </td>
-                            <td>
+                            <td class="hide-mobile">
                                 <ngb-highlight [result]="employeeProfile.dob " [term]="searchTerm">
                                 </ngb-highlight>
                             </td>
-                            <td>
+                            <td class="hide-mobile">
                                 <ngb-highlight [result]="employeeProfile.mobileNumber" [term]="searchTerm">
                                 </ngb-highlight>
                             </td>
 
-                            <td>
+                            <td class="hide-mobile">
                                 <ngb-highlight [result]="employeeProfile.address | slice:0:10 | titlecase"
                                     [term]="searchTerm">
                                 </ngb-highlight>
@@ -84,18 +85,24 @@
             </div>
 
 
-            <div class="d-flex justify-content-between p-2">
-                <select class="custom-select" style="width: auto" name="pageSize" [(ngModel)]="pageSize">
-                    <option [ngValue]="pageSize">{{pageSize}} items/page</option>
-                    <option [ngValue]="5">5 items per page</option>
-                    <option [ngValue]="10">10 items per page</option>
-                    <option [ngValue]="50">50 items per page</option>
-                    <option [ngValue]="100">100 items per page</option>
-                </select>
+            <div class="row d-flex justify-content-between p-2">
+                <div class="col-12 col-lg-6 col-md-6 col-sm-6">
+                    <select class="custom-select" style="width: auto" name="pageSize" [(ngModel)]="pageSize">
+                        <option [ngValue]="pageSize">{{pageSize}} items/page</option>
+                        <option [ngValue]="5">5 items per page</option>
+                        <option [ngValue]="10">10 items per page</option>
+                        <option [ngValue]="50">50 items per page</option>
+                        <option [ngValue]="100">100 items per page</option>
+                    </select>
+                </div>
+                <div class="col-12 col-lg-6 col-md-6 col-sm-6">
+                    <div class="d-flex pagination-btn">
+                        <ngb-pagination [collectionSize]="(total$ | async)!" [(page)]="page" [pageSize]="pageSize"
+                            [boundaryLinks]="true">
+                        </ngb-pagination>
+                    </div>
+                </div>
 
-                <ngb-pagination [collectionSize]="(total$ | async)!" [(page)]="page" [pageSize]="pageSize"
-                    [boundaryLinks]="true">
-                </ngb-pagination>
             </div>
 
         </form>
