basic image changed

--- a/src/app/pages/employee-form/employee-form.component.html
+++ b/src/app/pages/employee-form/employee-form.component.html
@@ -18,8 +18,7 @@
                         Angular, ReactJs, NextJs, PHP, WordPress, Android App, iOS App
                     </div>
                     <div class="mt-5">
-                        <img src="assets/images/basicLogo/blue_dots.svg" alt="">
-                        <img src="assets/images/basicLogo/desktop.png" alt="" style="width: 70%;">
+                        <img src="assets/images/basicLogo/web_development.jpg" alt="" style="width: 70%; margin: 10%;">
                     </div>
 
                 </div>
