--- a/src/app/pages/employee-detail/employee-detail.component.html
+++ b/src/app/pages/employee-detail/employee-detail.component.html
@@ -112,7 +112,7 @@
 
 <ng-template #userModal let-modal>
     <div class=" modal-header">
-        <h4 class="modal-title">User Information</h4>
+        <h4 class="modal-title">Employee Details</h4>
         <button type="button" class="close" aria-label="Close" (click)="closeEmployeeDetails()">
             <span aria-hidden="true">&times;</span>
         </button>
@@ -120,32 +120,57 @@
 
     <div class="modal-body">
 
-        <div class="card text-white bg-info mb-3" *ngIf="employeeDetails">
+        <div class="card  mb-3" *ngIf="employeeDetails">
             <div class="card-header">
-                <div>{{employeeDetails.name | uppercase}}</div>
-                <div class="">
-                    <div class="mt-2">
-                        <div>
-                            <div> <img src="assets/images/basicLogo/mobile_logo.svg" alt="" style="width: 2%;">
-                                {{employeeDetails.mobileNumber}}</div>
-                        </div>
-                        <div class="mt-2">
-                            <b> DOB : </b>
-                            <i>{{employeeDetails.dob }}</i>
-                        </div>
-                        <i>{{employeeDetails.email}}</i>
+                <div class="d-flex">
+                    <div class="mr-3">
+                        <img src="assets/images/basicLogo/user_logo.svg" alt="" style="width: 100%;" placement="top"
+                            ngbTooltip="Employee Name" container="body" class="pointer">
                     </div>
+                    <div class="mt-2">{{employeeDetails.name | uppercase}}</div>
+                </div>
 
+                <div class="d-flex mt-3">
+                    <div class="mr-3">
+                        <img src="assets/images/basicLogo/mobile_logo.svg" alt="" style="width: 100%;" placement="top"
+                            ngbTooltip="Mobile Number" container="body" class="pointer">
+                    </div>
+                    <div>
+                        <div class="mt-2">{{employeeDetails.mobileNumber}}</div>
+                    </div>
+                </div>
+
+                <div class="d-flex mt-3">
+                    <div class="mr-3">
+                        <img src="assets/images/basicLogo/birthday_logo.svg" alt="" placement="top"
+                            ngbTooltip="Date of Birth" container="body" class="pointer">
+                    </div>
+                    <div>
+                        <div class="mt-2">{{employeeDetails.dob }}</div>
+                    </div>
+                </div>
+
+                <div class="d-flex mt-3">
+                    <div class="mr-3">
+                        <img src="assets/images/basicLogo/email_logo.svg" alt="" placement="top" ngbTooltip="Email Id"
+                            container="body" class="pointer">
+                    </div>
+                    <div>
+                        <div class="mt-2">{{employeeDetails.email}}</div>
+                    </div>
                 </div>
             </div>
 
             <div class="card-body">
-                <h6 class="card-title">
 
-                </h6>
-                <div class="card-text">
-                    <div>Address</div>
-                    <p class="mt-2">{{employeeDetails.address}}</p>
+                <div class="d-flex mt-3">
+                    <div class="mr-3">
+                        <img src="assets/images/basicLogo/location_logo.svg" alt="" placement="top" ngbTooltip="Address"
+                            container="body" class="pointer">
+                    </div>
+                    <div>
+                        <div class=" card-text mt-2">{{employeeDetails.address}}</div>
+                    </div>
                 </div>
             </div>
         </div>
