--- a/src/app/pages/employee-form/employee-form.component.html
+++ b/src/app/pages/employee-form/employee-form.component.html
@@ -275,7 +275,7 @@
                 </div>
                 <div class="description mt-5">
                     <div>
-                        "TechSpawn has completely surpassed our expectations. I will refer everyone I know. Filed is
+                        "TechSpawn has completely surpassed our expectations. I will refer everyone I know. TechSpawn is
                         worth
                         much more than I paid."
                     </div>
@@ -305,7 +305,7 @@
                 <div class="description mt-5">
                     <div>
                         TechSpawn is the most valuable business resource we have EVER purchased. I was amazed at the
-                        quality of filed. We were treated like royalty.”
+                        quality of TechSpawn. We were treated like royalty.”
                     </div>
                 </div>
                 <div class="d-flex mt-5">
@@ -332,7 +332,8 @@
                 </div>
                 <div class="description mt-5">
                     <div>
-                        “The service was excellent. After using filed my business skyrocketed! It really saves me time
+                        “The service was excellent. After using TechSpawn my business skyrocketed! It really saves me
+                        time
                         and effort.”
                     </div>
                 </div>
